build/resources/test/LO-2/InvalidPrograms/test_24.lo
// Mismatching operand types from methods declared after usage

bool main(){
  {
    return (stringMethod() = integerMethod());
  }
}

bool integerMethod() {
    {
        return 0;
    }
}

String stringMethod() {
    {
        return "1";
    }
}